# hwmalloc2

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
cmake/: config.hpp.in
include/hwmalloc2/: any_resource.hpp  concepts.hpp  resource_builder.hpp
include/hwmalloc2/resource/: arena.hpp  host_memory.hpp  not_arena.hpp  not_memory.hpp  not_pinned.hpp  not_registered.hpp  pinned.hpp  registered.hpp  sentinel.hpp  user_host_memory.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  resources.cpp
